--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "canvas-to-image": "^2.0.0",
+    "platform": "^1.3.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-draggable": "^3.1.1",
     "react-resizable": "^1.7.5",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
