--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "bootstrap": "^4.3.1",
     "canvas-to-image": "^2.0.0",
     "platform": "^1.3.5",
@@ -29,7 +30,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2"
-  }
+  "devDependencies": {}
 }
