--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@fortawesome/fontawesome-free": "^5.7.2",
     "bootstrap": "^4.3.1",
     "canvas-to-image": "^2.0.0",
+    "jquery": "^3.3.1",
     "platform": "^1.3.5",
+    "popper.js": "^1.14.7",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-draggable": "^3.1.1",
